Remove unused codes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 node_modules
 .next
+.next/cache/*
+.next/trace
+.next/trace
+.next/cache/webpack/client-development/0.pack.gz
+.next/cache/webpack/client-development/1.pack.gz
