Add Banner and NavBar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,9 @@
     "customsearch",
     "darkmode",
     "nextjs",
-    "styledcomponent"
+    "nseries",
+    "roboto",
+    "styledcomponent",
+    "webp"
   ]
 }
